--- a/src/templates/layouts/index.hbs
+++ b/src/templates/layouts/index.hbs
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{{ title }} | Placeblogging</title>
+        <title>Home | Placeblogging</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,22 +23,15 @@
         <![endif]-->
 
         {{> nav }}
-        
-        <article>
-            <div class="page-content">
-            <header>
-             <div class="page-title">
-                <h2>{{title}}</h2>
-            </div>
-            </header>
+               
+        <div class="wrapper">
+            <div class="content">
                 {{#markdown }} 
                   {{> body  }} 
                 {{/markdown }} 
             </div>
-        
-        {{> footer }}
-        
-        </article>
+            {{> footer }}
+        </div>
 
         <script src="js/scripts-all.min.js"></script>
 
