--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -1,3 +1,4 @@
+
 body {
     padding-bottom: 2em;
 }
@@ -9,6 +10,13 @@ body {
     color: #fff;
     text-align: center;
     padding: 1em 1em 1.5em 1em;
+    background-image: url('../img/bgmap-blur.jpg');
+    @extend .background-image !optional;
+      border-bottom: 1px solid #666;
+}
+
+.hero:before {
+	@extend .background-image-lightened;
 }
 
 .hero-boxes {
