--- a/src/css/_nav.scss
+++ b/src/css/_nav.scss
@@ -33,7 +33,7 @@ header.navigation {
 
   .navigation-wrapper {
     @include clearfix;
-    @include outer-container(750px);
+    @include outer-container();
     position: relative;
     z-index: 9999;
   }
